Alteração para contemplar pagamento dos dois cedentes possíveis em função do cadastro do evento

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 #==============Configurações externas================================
 # Dados recebidos por variáveis de ambiente
 soldiApiBaseUrl=${soldiApiBaseUrl}
-codigoEmpresa=${codigoEmpresa}
-codigoCriptografia=${codigoCriptografia}
+
+codigoEmpresaSoldi=${codigoEmpresaSoldi}
+codigoCriptografiaSoldi=${codigoCriptografiaSoldi}
+
+codigoEmpresaAesas=${codigoEmpresaAesas}
+codigoCriptografiaAesas=${codigoCriptografiaAesas}
 
 #==============Configurações internas================================
 #Quantidade de dias que o boleto será válido a partir de sua emissão 
