Externalizando url de acesso ao shopline

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 # Dados recebidos por variáveis de ambiente
 soldiApiBaseUrl=${soldiApiBaseUrl}
 
+shoplineUrl=&{shoplineUrl}
+
 codigoEmpresaSoldi=${codigoEmpresaSoldi}
 codigoCriptografiaSoldi=${codigoCriptografiaSoldi}
 
