Implementação inicial da consulta de status de pagamento de boletos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 soldiApiBaseUrl=${soldiApiBaseUrl}
 
 shoplineUrl=&{shoplineUrl}
+shoplineStatusUrl=&{shoplineStatusUrl}
 
 codigoEmpresaSoldi=${codigoEmpresaSoldi}
 codigoCriptografiaSoldi=${codigoCriptografiaSoldi}
