--- a/pom.xml
+++ b/pom.xml
@@ -42,16 +42,34 @@
 		</dependency>	
 				
 		<dependency>
+		    <groupId>com.squareup.okhttp3</groupId>
+		    <artifactId>logging-interceptor</artifactId>
+		    <version>3.8.0</version>
+		</dependency>
+				
+		<dependency>
 		  <groupId>com.squareup.retrofit2</groupId>
 		  <artifactId>retrofit</artifactId>
 		  <version>2.4.0</version>
-		</dependency>		
+		</dependency>
 		
+		<dependency>
+		    <groupId>com.squareup.retrofit2</groupId>
+		    <artifactId>converter-scalars</artifactId>
+		    <version>2.3.0</version>
+		</dependency>		
+				
 		<dependency>
 		    <groupId>com.squareup.retrofit2</groupId>
 		    <artifactId>converter-jackson</artifactId>
 		    <version>2.4.0</version>
-		</dependency>		
+		</dependency>	
+		
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.5</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
